feat: 글쓰기 기능 구현
- 프론트엔드 글쓰기 페이지 form으로 작업했습니다.
- 백엔드와 SQLite를 연동해서 이미지 및 데이터를 업로드하는 기능을 구현했습니다.

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -78,6 +78,7 @@ main {
     right: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     animation: moving-logo 1s infinite; 
+    text-decoration: none;
 
 }
 
